# todo-vault

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json  renovate.json  rust-toolchain.toml  rustfmt.toml  tailwind.config.js
.cargo/: config.toml  docker-config.toml
.github/workflows/: build.yml
.sass-cache/0efa49b712e5eaf96d91862432ae6a22ee7ab781/: main.sassc
app/: Cargo.toml
app/src/: counters.rs  error_template.rs  functions.rs  lib.rs  utils.rs
app/src/components/: button.rs  dropdown_button.rs  footer.rs  form_drawer.rs  main_page.rs  mod.rs  navbar.rs  svg.rs  table.rs
app/src/pages/: about.rs  counter.rs  index.rs  mod.rs  my_todo_lists.rs  todo_list.rs  todos.rs
entity/: Cargo.toml
entity/src/: db.rs  lib.rs  lists.rs  prelude.rs  todo.rs  todos.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_todos_table.rs  m20230415_105634_add_assignee_column.rs
server/: Cargo.toml
server/src/: db.rs  fileserv.rs  main.rs
src/: app.rs  main.rs
style/: main.sass  tailwind.css
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
