[profile.dev]
opt-level = 1
lto = "thin"

[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.app]
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
strip = "debuginfo"
opt-level = 3

[workspace]
members = ["app", "entity", "migration", "server", "wasm-lib"]

[workspace.dependencies]
leptos = { version = "0.2.3", default-features = false, features = ["serde"] }
leptos_dom = { version = "0.2.3", default-features = false }
leptos_meta = { version = "0.2.3", default-features = false }
leptos_router = { version = "0.2.3", default-features = false }
leptos_axum = { version = "0.2.3" }

[[workspace.metadata.leptos]]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
name = "todo-vault"
output-name = "todo-vault"
site-root = "target/site"
assets-dir = "public"
site-pkg-dir = "pkg"
style-file = "style/main.sass"
site-addr = "127.0.0.1:3000"
bin-package = "server"
lib-package = "wasm-lib"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "./tailwind.config.js"
