[profile.dev]
opt-level = 1
lto = "thin"

[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.app]
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
strip = "debuginfo"
opt-level = 3

[workspace]
members = ["app", "entity", "migration", "server", "wasm-lib"]
resolver = "2"

[workspace.dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = ["serde", "nightly"] }
leptos_dom = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
leptos_hot_reload = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
leptos_macro = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
leptos_reactive = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git", default-features = false }
leptos_server = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
server_fn = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
server_fn_macro = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
server_fn_macro_default = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
leptos_axum = { git = "https://github.com/leptos-rs/leptos.git" }
leptos_config = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
leptos_integration_utils = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [ "nightly" ] }
wasm-bindgen = "=0.2.87"

[[workspace.metadata.leptos]]
name = "todo-vault"
output-name = "todo-vault"
site-root = "target/site"
assets-dir = "public"
site-pkg-dir = "pkg"
style-file = "style/main.sass"
site-addr = "127.0.0.1:3000"
bin-package = "server"
bin-target-triple = "x86_64-unknown-linux-gnu"
lib-package = "wasm-lib"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "./tailwind.config.js"
