[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
leptos_dom.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

broadcaster = { version = "1.0.0", optional = true }
cfg-if = "1"
http = "0.2.9"
thiserror = "1.0.39"
serde = { version = "1.0.152", features = [
  "derive",
  "serde_derive",
  "alloc",
  "rc",
] }
lazy_static = "1.4.0"
getrandom = { version = "0.2.8", features = ["js", "std"] }
tracing = { version = "0.1.37", features = ["async-await", "log"] }

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:broadcaster",
]
