[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
leptos_dom.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

entity = { path = "../entity", default-features = false }

broadcaster = { version = "=1.0.0", optional = true }
cfg-if = "=1.0.0"
http = "=0.2.9"
thiserror = "=1.0.40"
serde = { version = "=1.0.159", features = [
  "derive",
  "serde_derive",
  "alloc",
  "rc",
] }
lazy_static = "=1.4.0"
getrandom = { version = "=0.2.8", features = ["js", "std"] }
tracing = { version = "=0.1.37", features = ["async-await", "log"] }
base64 = "=0.21.0"
convert_case = "=0.6.0"
rand = "=0.8.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "Event", "EventTarget", "Window", "console", "DomRect"] }
js-sys = "0.3.61"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "entity/client-side"]
ssr = ["entity/server-side", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:broadcaster"]
