[package]
license = "AGPL-3.0-or-later"
name = "entity"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
migration = { path = "../migration" }

async-std = { version = "1", features = ["attributes", "tokio1"] }
derive_more = "0.99.17"
figment = { version = "0.10.8", features = ["toml", "json", "env", "yaml"] }
serde = { version = "1.0.152", features = [
  "derive",
  "serde_derive",
  "alloc",
  "rc",
] }
thiserror = "1.0.39"
tracing = { version = "0.1.37" }

[dependencies.sea-orm]
version = "0.11.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-time",
  "with-json",
  "with-uuid",
]
