[package]
license = "AGPL-3.0-or-later"
name = "entity"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
migration = { path = "../migration", optional = true }

async-std = { version = "1", features = ["attributes", "tokio1"] }
derive_more = "0.99.17"
figment = { version = "0.10.8", features = [
  "toml",
  "json",
  "env",
  "yaml",
], optional = true }
serde = { version = "1.0.158", features = [
  "derive",
  "serde_derive",
  "alloc",
  "rc",
] }
thiserror = "1.0.40"
tracing = { version = "0.1.37" }
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", features = ["serde", "alloc"] }

[dependencies.sea-orm]
version = "0.11.1"
features = ["with-time", "with-json", "with-uuid"]

[features]
default = ["server-side"]
server-side = [
  "dep:migration",
  "dep:figment",
  "sea-orm/runtime-tokio-rustls",
  "sea-orm/sqlx-sqlite",
]
client-side = []
