[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
leptos = { workspace = true, features = ["serde", "ssr"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_dom = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

axum = "0.6.10"
derive_more = "0.99.17"
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
simple_logger = "4"
tokio = "1.25.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = [
  "compression-full",
  "cors",
  "decompression-full",
  "fs",
  "tokio",
  "trace",
  "tracing",
  "uuid",
] }
thiserror = "1.0.39"
tracing = { version = "0.1.37", features = ["async-await", "log"] }
http = "0.2.9"
serde = { version = "1.0.152", features = [
  "derive",
  "serde_derive",
  "unstable",
  "alloc",
  "rc",
] }
figment = { version = "0.10.8", features = ["toml", "json", "env", "yaml"] }
tracing-subscriber = { version = "0.3.16", features = [
  "once_cell",
  "serde",
  "serde_json",
  "time",
  "tracing",
  "json",
] }
