[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
entity = { path = "../entity" }
leptos = { workspace = true, features = ["serde", "ssr"] }
leptos_axum = { workspace = true }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }

axum = "=0.6.12"
tokio = "=1.27.0"
tower = "=0.4.13"
tower-http = { version = "=0.4.0", features = [
  "cors",
  "fs",
  "sensitive-headers",
  "tokio",
  "trace",
  "tracing",
  "uuid",
] }
thiserror = "=1.0.40"
tracing = { version = "=0.1.37", features = ["async-await", "log"] }
http = "=0.2.9"
serde = { version = "=1.0.159", features = [
  "derive",
  "serde_derive",
  "unstable",
  "alloc",
  "rc",
] }
tracing-subscriber = { version = "=0.3.16", features = [
  "once_cell",
  "serde",
  "serde_json",
  "time",
  "tracing",
  "json",
] }
