[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default_features = false, features = ["hydrate"] }
leptos = { workspace = true, features = ["serde", "hydrate"] }
wasm-bindgen = "0.2"
console_log = "0.2"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2.1"
