[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = ["serde", "hydrate"] }
wasm-bindgen = "=0.2.84"
console_log = "=1.0.0"
console_error_panic_hook = "=0.1.7"
tracing = "=0.1.37"
tracing-wasm = "=0.2.1"
